# Comparing_Accuracy_of_Ternary_Neural_Networks_in_Small_Models

./: .gitignore  README.md  bitLinear.py  pyproject.toml  test_code.py  vis.py
